added config for hiding the sidebar

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,7 @@ backgroundColor = "#FFF8F3"
 secondaryBackgroundColor = "#EDE0D4"
 textColor = "#483434"
 font = "serif"
+
+
+[client]
+showSidebarNavigation = false
