--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ psycopg[binaries]
 pandas
 langchain
 langchain_core
+langchain_openai
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 jira
+flask
