Updated code to function with docker compose. Had to comment out some stuff and fix some endpoints for container to container connectivity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
     platform: linux/arm64/v8
     volumes:
       - .:/app
-
   streamlit-app:
     build:
       context: .
@@ -21,3 +20,8 @@ services:
       - .:/app
     depends_on:
       - flask-app
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
