program is now ripe for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,24 @@ services:
       dockerfile: Dockerfile.flask
     ports:
       - "5000:5000"
-    platform: linux/arm64/v8
+    platform: linux/amd64
     volumes:
       - .:/app
+
   streamlit-app:
     build:
       context: .
       dockerfile: Dockerfile.streamlit
     ports:
       - "8501:8501"
-    platform: linux/arm64/v8
+    platform: linux/amd64
     volumes:
       - .:/app
     depends_on:
       - flask-app
-  redis:
+
+  redis-app:
     image: "redis:latest"
+    platform: linux/amd64
     ports:
       - "6379:6379"
-
