--- a/Dockerfile.flask
+++ b/Dockerfile.flask
@@ -1,10 +1,12 @@
 FROM tensorflow/tensorflow
 
 WORKDIR /app
-COPY . /app
+COPY requirements.txt /app
 
 RUN pip install --ignore-installed blinker 
 RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
+
+COPY . /app
 
 CMD ["flask", "run", "--host=0.0.0.0"]
