--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,10 +1,13 @@
 FROM tensorflow/tensorflow
 
 WORKDIR /app
+COPY requirements.txt /app
+
+RUN pip install --ignore-installed blinker
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . /app
 
-RUN pip install --ignore-installed blinker 
-RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8501
 
 CMD ["streamlit", "run", "Home.py", "--server.port=8501", "--server.address=0.0.0.0"]
