--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports:
       - "5000:5000"
     platform: linux/amd64
+    environment:
+      - PYTHONUNBUFFERED=1
     volumes:
       - .:/app
 
