Update env file and jira auth to use appropriate environmental variables.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
+GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
 
 JIRA_CLIENT_ID=
-REDIRECT_URI=
-CLIENT_SECRET=
-DB=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+JIRA_REDIRECT_URI=
+JIRA_CLIENT_SECRET=
+
